header menu adde

--- a/public/contact.html
+++ b/public/contact.html
@@ -66,6 +66,64 @@
           href="tel:+70000000000">+7 (000) 000-00-00</a>
       </div>
     </header>
+
+    <main>
+
+    </main>
+
+    <!-- footer -->
+    <footer class="bg-light-brown md:pt-[73px] pt-11 pb-5 md:pb-[61px] md:mt-[120px] mt-[50px]" id="footer">
+      <div class="container flex lg-plus:flex-row flex-col items-start justify-between lg:gap-[99px] gap-8">
+        <a href="#!">
+          <img src="./assets/images/logo/compant-logo-black.png" alt="company-logo" width="261" height="63">
+        </a>
+        <div
+          class="flex lg-plus:flex-row flex-col items-start lg:gap-[108px] gap-5 w-full lg:justify-start justify-between">
+          <div>
+            <div class="text-graphite-gray font-medium text-sm leading-8 pb-10px">Покупателям</div>
+            <ul>
+              <li>
+                <a class="text-sm leading-8 text-light-gray" href="#!">Акции</a>
+              </li>
+              <li>
+                <a class="text-sm leading-8 text-light-gray" href="#!">Новости и статьи</a>
+              </li>
+              <li>
+                <a class="text-sm leading-8 text-light-gray" href="#!">Реквизиты и документы</a>
+              </li>
+              <li>
+                <a class="text-sm leading-8 text-light-gray" href="#!">Ипотека</a>
+              </li>
+              <li>
+                <a class="text-sm leading-8 text-light-gray" href="#!">Политика конфиденциальности</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <div class="text-graphite-gray font-medium text-sm leading-8 pb-10px">Недвижимость</div>
+            <ul>
+              <li>
+                <a class="text-sm leading-8 text-light-gray" href="#!">Квартиры</a>
+              </li>
+              <li>
+                <a class="text-sm leading-8 text-light-gray" href="#!">Коммерческие помещения</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <div class="text-graphite-gray font-medium text-sm leading-8 pb-10px">Компания</div>
+            <ul>
+              <li>
+                <a class="text-sm leading-8 text-light-gray" href="#!">О компании</a>
+              </li>
+              <li>
+                <a class="text-sm leading-8 text-light-gray" href="#!">Контакты</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
 
   <!-- swiper js -->
