--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,42 @@
   <div class="wrapper">
 
     <!-- header -->
-    <header>
+    <header class="relative">
+      <div
+        class="header-menu absolute top-0 left-0 w-[375px] bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
+        <button class="close-menu__btn mb-[150px]">
+          <img src="./assets/images/icons/close-icon.svg" alt="close icon">
+        </button>
+        <ul class="space-y-4 pb-[197px]">
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] " href="#!">О
+              комплексе</a>
+          </li>
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+              href="#!">Генплан</a>
+          </li>
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+              href="#!">Номера</a>
+          </li>
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+              href="#!">Ипотека</a>
+          </li>
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+              href="#!">Акции</a>
+          </li>
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+              href="#!">Документы</a>
+          </li>
+        </ul>
+        <a class="gray-btn__lg" href="#!">Заказать звонок</a>
+      </div>
       <div class="flex items-center justify-between pt-7 text-sm	xl:max-w-[1388px] mx-auto xl:px-0 px-5">
-        <button class="menu flex items-center  md:gap-2.5 md:w-[175px]">
+        <button class="open-menu__btn flex items-center  md:gap-2.5 md:w-[175px]">
           <img src="./assets/images/icons/hamburger-menu.svg" alt="hamburger-menu">
           <span class="font-light text-white md:block hidden">меню</span>
         </button>
