--- a/public/number.html
+++ b/public/number.html
@@ -22,9 +22,42 @@
   <div class="overflow-hidden">
 
     <!-- header -->
-    <header id="header">
+    <header class="relative">
+      <div
+        class="header-menu absolute top-0 left-0 w-[375px] bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
+        <button class="close-menu__btn mb-[150px]">
+          <img src="./assets/images/icons/close-icon.svg" alt="close icon">
+        </button>
+        <ul class="space-y-4 pb-[197px]">
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] " href="#!">О
+              комплексе</a>
+          </li>
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+              href="#!">Генплан</a>
+          </li>
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+              href="#!">Номера</a>
+          </li>
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+              href="#!">Ипотека</a>
+          </li>
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+              href="#!">Акции</a>
+          </li>
+          <li>
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+              href="#!">Документы</a>
+          </li>
+        </ul>
+        <a class="gray-btn__lg" href="#!">Заказать звонок</a>
+      </div>
       <div class="flex items-center justify-between pt-7 text-sm	xl:max-w-[1388px] mx-auto xl:px-0 px-5">
-        <button class="menu flex items-center  md:gap-2.5 md:w-[175px]">
+        <button class="open-menu__btn flex items-center  md:gap-2.5 md:w-[175px]">
           <img src="./assets/images/icons/hamburger-menu.svg" alt="hamburger-menu">
           <span class="font-light text-white md:block hidden">меню</span>
         </button>
@@ -66,7 +99,8 @@
                 <a class="outline-btn" href="#!">Планировка</a>
                 <a class="outline-btn" href="#!">На этаже</a>
               </div>
-              <div class="bg-white lg:w-[565px] w-full sm:h-[584px] h-[342px] px-[14px] flex items-center justify-center">
+              <div
+                class="bg-white lg:w-[565px] w-full sm:h-[584px] h-[342px] px-[14px] flex items-center justify-center">
                 <img src="./assets/images/singl-room-project.png" alt="singl-room-project">
               </div>
             </div>
@@ -110,17 +144,20 @@
                 <div class="text-light-brown mt-5 space-y-8">
                   <div class="flex items-center gap-1">
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">Стоимость</span>
-                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown md:mt-[3px] mt-[5px]">
+                    </div>
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">4.805 млн</span>
                   </div>
                   <div class="flex items-center gap-1">
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">Цена за м²</span>
-                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown md:mt-[3px] mt-[5px]">
+                    </div>
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">113.000 руб</span>
                   </div>
                   <div class="flex items-center gap-1">
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">Ипотека</span>
-                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown md:mt-[3px] mt-[5px]">
+                    </div>
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">от 35.000 руб/мес</span>
                   </div>
                 </div>
@@ -130,17 +167,20 @@
                 <div class="text-light-brown mt-5 space-y-8">
                   <div class="flex items-center gap-1">
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">Стоимость</span>
-                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown md:mt-[3px] mt-[5px]">
+                    </div>
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">4.805 млн</span>
                   </div>
                   <div class="flex items-center gap-1">
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">Цена за м²</span>
-                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown md:mt-[3px] mt-[5px]">
+                    </div>
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">113.000 руб</span>
                   </div>
                   <div class="flex items-center gap-1">
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">Ипотека</span>
-                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown md:mt-[3px] mt-[5px]">
+                    </div>
                     <span class="font-Muller leading-4 text-base whitespace-nowrap">от 35.000 руб/мес</span>
                   </div>
                 </div>
@@ -268,11 +308,11 @@
         <div class="container">
           <h3 class="title-xl">калькулятор ипотеки</h3>
           <div
-            class="md:mt-[33px] mt-7 flex lg:flex-row flex-col items-center justify-between lg:gap-[53px] gap-8 text-gray">
+            class="md:mt-[33px] mt-7 flex lg:flex-row flex-col items-center justify-between lg:gap-[53px] gap-[30px] text-gray">
             <div class="w-full">
               <span class="text-sm leading-[18px] font-light font-Muller block">Стоимость недвижимости</span>
               <span id="toSliderTooltip1"
-                class="text-[32px] leading-[33px] font-medium block font-ReformaGrotesk mt-[15px] mb-3">4.500.000
+                class="text-[32px] leading-[33px] font-medium block font-ReformaGrotesk mt-[15px] mb-3 text-graphite-gray">4.500.000
                 руб.</span>
               <div class="range_container">
                 <div class="sliders_control">
@@ -285,7 +325,7 @@
             <div class="w-full">
               <span class="text-sm leading-[18px] font-light font-Muller block">Первоначальный взнос</span>
               <span id="toSliderTooltip2"
-                class="text-[32px] leading-[33px] font-medium block font-ReformaGrotesk mt-[15px] mb-3">Первоначальный
+                class="text-[32px] leading-[33px] font-medium block font-ReformaGrotesk mt-[15px] mb-3 text-graphite-gray">Первоначальный
                 взнос</span>
               <div class="range_container">
                 <div class="sliders_control">
@@ -298,7 +338,7 @@
             <div class="w-full">
               <span class="text-sm leading-[18px] font-light font-Muller block">Срок кредита</span>
               <span id="toSliderTooltip3"
-                class="text-[32px] leading-[33px] font-medium block font-ReformaGrotesk mt-[15px] mb-3">20
+                class="text-[32px] leading-[33px] font-medium block font-ReformaGrotesk mt-[15px] mb-3 text-graphite-gray">20
                 лет</span>
               <div class="range_container">
                 <div class="sliders_control">
@@ -311,7 +351,7 @@
           </div>
           <div class="flex md:items-center md:flex-row flex-col gap-3 justify-between mt-10">
             <span
-              class="text-[40px] leading-[41.28px] font-medium font-ReformaGrotesk text-gray block total-price">20.567
+              class="text-[40px] leading-[41.28px] font-medium font-ReformaGrotesk text-graphite-gray block total-price">20.567
               руб / мес</span>
             <a class="gray-btn__lg text-center" href="#!">Заказать консультацию</a>
           </div>
@@ -319,7 +359,7 @@
       </section>
 
       <!-- similar-numbers -->
-      <section class="similar-numbers lg-plus:my-[120px] my-[50px]">
+      <section class="similar-numbers lg-plus:my-[120px] mt-[50px] mb-[43px]">
         <div class="container flex justify-between items-end">
           <h1 class="title">Похожие номера</h1>
 
@@ -553,7 +593,7 @@
         <div class="container">
           <h1 class="title">Преимущества комплекса</h1>
 
-          <div class="mt-[51px] flex flex-col gap-10">
+          <div class="md:mt-[51px] mt-[26px] flex flex-col gap-10">
             <div class="flex lg-plus:flex-row flex-col lg-plus:items-center justify-between lg:gap-[102px] gap-5">
               <img src="./assets/images/product-img-1.png" alt="product img">
               <div class="max-w-[515px] flex flex-col lg-plus:gap-6">
@@ -566,7 +606,7 @@
                   Заголовок
                   преимущества
                 </div>
-                <p class="md:text-lg text-sm font-Muller text-light-white leading-6 tracking-wide font-light">
+                <p class="md:text-lg text-sm font-Muller text-light-white leading-6 tracking-[1px] font-light">
                   Сложно придумать более идеальную локацию для гостиничного комплекса у резидентов Корсакова будет
                   соблюдён баланс всех сфер жизни как на территории отеля, так и за его пределами.
                 </p>
@@ -583,7 +623,7 @@
                   Заголовок
                   преимущества
                 </div>
-                <p class="md:text-lg text-sm font-Muller text-light-white leading-6 tracking-wide font-light">
+                <p class="md:text-lg text-sm font-Muller text-light-white leading-6 tracking-[1px] font-light">
                   Сложно придумать более идеальную локацию для гостиничного комплекса у резидентов Корсакова будет
                   соблюдён баланс всех сфер жизни как на территории отеля, так и за его пределами.
                 </p>
@@ -602,7 +642,7 @@
                   Заголовок
                   преимущества
                 </div>
-                <p class="md:text-lg text-sm font-Muller text-light-white leading-6 tracking-wide font-light">
+                <p class="md:text-lg text-sm font-Muller text-light-white leading-6 tracking-[1px] font-light">
                   Сложно придумать более идеальную локацию для гостиничного комплекса у резидентов Корсакова будет
                   соблюдён баланс всех сфер жизни как на территории отеля, так и за его пределами.
                 </p>
