--- a/public/number.html
+++ b/public/number.html
@@ -73,7 +73,7 @@
       <div class="breadcrumb container">
         <ul>
           <li>
-            <a href="#!">Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <img src="./assets/images/icons/next-icon.svg" alt="next icon">
           <li>
